@startuml ARCH05_MCD
!pragma layout smetana
skinparam shadowing false
skinparam defaultFontSize 11
skinparam backgroundColor white
skinparam ArrowColor #333333
skinparam ArrowThickness 1
skinparam Padding 5
skinparam entity {
  BackgroundColor white
  BorderColor #666666
  HeaderBackgroundColor #EEEEEE
  HeaderFontColor #333333
}

title ARCH05 - Modele Conceptuel des Donnees (MCD)\nSchema app - entites principales

entity "IMF" {
  * uid : UUID
  --
  nom : VARCHAR(200)
  code : VARCHAR(20)
  pays : VARCHAR(50)
}

entity "AGENCE" {
  * uid : UUID
  --
  nom : VARCHAR(200)
  adresse : VARCHAR(500)
  actif : BOOLEAN
}

entity "USER" {
  * uid : UUID
  --
  email : VARCHAR(255)
  nomComplet : VARCHAR(200)
  role : VARCHAR(30)
  actif : BOOLEAN
}

entity "CLIENT_INFORMEL" {
  * uid : UUID
  --
  nom : VARCHAR(200)
  prenom : VARCHAR(200)
  telephone : VARCHAR(20)
  secteurActivite : VARCHAR(100)
  dateAdhesion : DATE
}

entity "KYC_DOSSIER" {
  * uid : UUID
  --
  statut : VARCHAR(30)
  ' EN_ATTENTE | DOCUMENTS_SOUMIS
  ' APPROUVE | REJETE
  dateVerification : TIMESTAMP
}

entity "DOSSIER_CREDIT" {
  * uid : UUID
  --
  montantDemande : NUMERIC(15,2)
  dureeMois : INTEGER
  objetFinancement : VARCHAR(500)
  statut : VARCHAR(30)
  ' INSTRUCTION | EN_COMITE
  ' APPROUVE | REJETE | AJOURNE | DEBLOQUE
  dateDecision : TIMESTAMP
}

entity "CONTRAT_CREDIT" {
  * uid : UUID
  --
  referenceContrat : VARCHAR(50)
  montantFinal : NUMERIC(15,2)
  tauxInteret : NUMERIC(5,2)
  nbEcheances : INTEGER
  periodicite : VARCHAR(20)
  statut : VARCHAR(30)
  ' BROUILLON | SOUMIS | VALIDE | ACTIF | REJETE
  signaturesConformes : BOOLEAN
}

entity "CREANCE" {
  * uid : UUID
  --
  montantTotal : NUMERIC(15,2)
  montantRembourse : NUMERIC(15,2)
  joursRetard : INTEGER
  statut : VARCHAR(30)
  ' ACTIF | EN_RETARD | EN_RECOUVREMENT | SOLDE | PERTE
  classeCOBAC : CHAR(1)
}

entity "COLLECTE_TERRAIN" {
  * uid : UUID
  --
  montantCollecte : NUMERIC(15,2)
  dateCollecte : DATE
  canal : VARCHAR(30)
  statut : VARCHAR(20)
  ' SOUMISE | CONFIRMEE | REJETEE
  synchronise : BOOLEAN
}

entity "ALERTE_IMPAYE" {
  * uid : UUID
  --
  joursRetard : INTEGER
  montantEnRetard : NUMERIC(15,2)
  statutAlerte : VARCHAR(20)
  ' ACTIVE | ESCALADEE | CLOTUREE
}

entity "CLIENT_SCORE" {
  * uid : UUID
  --
  scoreMcrs : NUMERIC(4,3)
  scoreCrs : NUMERIC(4,3)
  scoreRps : NUMERIC(4,3)
  scoreCsi : NUMERIC(4,3)
  niveauRisque : VARCHAR(10)
  ' FAIBLE | MODERE | ELEVE | CRITIQUE
  dateCalcul : TIMESTAMP
}

entity "PLAN_APUREMENT" {
  * uid : UUID
  --
  montantAccorde : NUMERIC(15,2)
  nombreEcheances : INTEGER
  statut : VARCHAR(20)
}

entity "NOTIFICATION" {
  * uid : UUID
  --
  type : VARCHAR(50)
  titre : VARCHAR(200)
  lu : BOOLEAN
  createdAt : TIMESTAMP
}

' -- Relations --
IMF      ||--o{ AGENCE           : "possede (1,n)"
IMF      ||--o{ USER             : "emploie (1,n)"
AGENCE   ||--o{ USER             : "rattache (1,n)"
USER     ||--o{ COLLECTE_TERRAIN : "effectue (1,n)"
USER     |o--o{ NOTIFICATION     : "recoit (0,n)"

CLIENT_INFORMEL   ||--o{ DOSSIER_CREDIT     : "souscrit (1,n)"
CLIENT_INFORMEL   ||--o{ COLLECTE_TERRAIN   : "verse (1,n)"
CLIENT_INFORMEL   |o--o| KYC_DOSSIER        : "verifie (0,1)"
CLIENT_INFORMEL   |o--o| CLIENT_SCORE       : "score (0,1)"

DOSSIER_CREDIT    |o--o| CONTRAT_CREDIT     : "genere (0,1)"
CONTRAT_CREDIT    |o--o| CREANCE            : "produit (0,1)"
CREANCE           |o--o{ PLAN_APUREMENT     : "restructure (0,n)"
CREANCE           ||--o{ ALERTE_IMPAYE      : "declenche (1,n)"
CREANCE           |o--o{ COLLECTE_TERRAIN   : "alimente (0,n)"

@enduml
